SVP 31OCT2021: Removed private email addresses

--- a/README
+++ b/README
@@ -37,7 +37,7 @@ http://www1.speech.kth.se/prod/wavesurferforum/phpBB2/index.php
 which can be used to discuss Snack issues.
 Also, please start the subject line with the word "snack" in any e-mail
 correspondence in order to clearly indicate that it is an important message.
-<kare@speech.kth.se>
+<xxxxxxxxxxxxxxxxxx>
 
 
 Introduction
